# sv2-apps

./: .dockerignore  .gitignore  CONTRIBUTING.md  PROFILING.md  README.md  RELEASE.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: docker-or-binary-problem.yml
bitcoin-core-sv2/: Cargo.toml  README.md
docker/: .env  .env.example  Dockerfile  Dockerfile.base  README.md  docker-compose.yml  docker_env.example  pool-docker-compose.yml  readme.md  sv2-tp.Dockerfile
integration-tests/: Cargo.toml  README.md
integration-tests/benches/: mining_device_hasher_bench.rs  mining_device_microbatch_bench.rs  mining_device_scaling_bench.rs
integration-tests/lib/: interceptor.rs  message_aggregator.rs  mock_roles.rs  mod.rs  prometheus_metrics_assertions.rs  sniffer.rs  sv1_sniffer.rs  template_provider.rs  utils.rs
integration-tests/lib/mining_device/: mod.rs
integration-tests/resources/: README.md
integration-tests/tests/: bitcoin_core_ipc_integration.rs  extensions.rs  jd_integration.rs  jd_provide_missing_transaction.rs  jd_tproxy_integration.rs  jdc_block_propagation.rs  jdc_cached_shares.rs  jdc_fallback_to_solo.rs  jdc_receives_submit_shares_success.rs  jds_block_propagation.rs  mining_device_fast_hasher_equivalence.rs  monitoring_integration.rs  pool_integration.rs  pool_solo_mining.rs  sniffer_integration.rs  sv1.rs  sv2_mining_device.rs  tp_fallback.rs  translator_integration.rs
miner-apps/: Cargo.toml
pool-apps/: Cargo.toml
scripts/: README.md  build-all-workspaces.sh  clippy-fmt-and-test.sh  coverage-apps.sh  publish-apps.sh  publish.sh  release-apps.sh  validate-docker-config.sh
stratum-apps/: Cargo.toml  README.md
(+231 files in other folders)
