[package]
name = "integration_tests_sv2"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
documentation = "https://github.com/stratum-mining/stratum"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[dependencies]
stratum-apps = { path = "../stratum-apps", features = ["network", "config"] }
jd_client_sv2 = { path = "../miner-apps/jd-client" }
jd_server = { path = "../pool-apps/jd-server" }
mining_device = { path = "../miner-apps/mining-device" }
pool_sv2 = { path = "../pool-apps/pool" }
translator_sv2 = { path = "../miner-apps/translator" }
async-channel = { version = "1.5.1", default-features = false }
corepc-node = { version = "0.7.0", default-features = false, features = ["28_0"] }
flate2 = { version = "1.1.0", default-features = false, features = ["rust_backend"] }
minreq = { version = "2.12.0", default-features = false, features = ["https"] }
once_cell = { version = "1.19.0", default-features = false }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
tar = { version = "0.4.41", default-features = false }
tokio = { version="1.44.1", default-features = false,  features = ["tracing"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
hex = "0.4.3"

[lib]
path = "lib/mod.rs"
